--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 3.6
+Enhanced the prefferences menu by moving the open, reset and save buttons out of the other categories of settings into the main prefferences category.
 Fixed an issue where the letter S key didn't work in normal mode to view the store's current health.
 Improved the updater for mac devices. If an update is available for that platform, users are now prompted to manually download the update in their browser. The download link is automatically copied to their clipboard for convenience, making it easier for them to quickly paste it for downloading.
 Added randomized platform and heal zone placements in Endless Mode. Platforms and heal zones no longer spawn in the same 2 spots like they once did before.
