--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -3,12 +3,12 @@ Made it so the pistol weapon is only exclusive to the normal mode. You can press
 Added a new pistol weapon for the normal Mode. Players now have access to this weapon in place of the former machine gun. The machine gun can still be used in endless mode.
 Enhanced the preferences menu by moving the open, reset and save buttons out of the other categories into the main preferences category.
 Fixed an issue where the letter S key didn't work in normal mode to view the store's current health.
-Improved the updater for mac devices. If an update is available for that platform, users are now prompted to manually download the update in their browser. The download link is automatically copied to their clipboard for convenience, making it easier for them to quickly paste it for downloading.
-Added randomized platform and heal zone placements in Endless Mode. Platforms and heal zones no longer spawn in the same 2 spots like they once did before.
-Made it so store destruction platforms in level 6 of normal mode now spawn at randomized positions of the map. The glass platforms that usually spawn during the store countdown are no longer fixed to the same 2 spots. They now appear at random locations on the left and right sides of the map.
+Added randomized platform and heal zone placements in both normal and Endless modes. Platforms and heal zones no longer spawn in the same 2 spots like they once did before.
+Made it so store destruction platforms in level 6 on normal mode now spawn at randomized positions of the map. The glass platforms that usually spawn during the store countdown are no longer fixed to the same 2 spots. They now appear at random locations on the left and right sides of the map.
 Fixed an issue where the shop menu in endless mode refused to work to make successful purchases.
+Improved the updater for mac devices. If an update is available for that platform, users are now prompted to manually download the update in their browser. The download link is automatically copied to their clipboard for convenience, making it easier for them to quickly paste it for downloading.
 Removed the save game option found in the pause menu.
-Added some more guard related sounds into the learn game sounds menu.
+Added some more guard and weapon related sounds into the learn game sounds menu.
 new in 3.5
 Made it so mac and windows update files get deleted propperly upon successful extraction.
 Added fallback behavior for failed update extractions. If an update extraction fails, the game will now provide clearer feedback and avoids restarting or exiting abruptly, allowing users to try again without patencial data loss.
