Made it so the Learn Game Sounds menu remembers your last selected sound category. This is useful for returning to a specific sound group without having to start over again from the top every time.

--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,5 +1,6 @@
 new in 3.7
-Improved the speaker test menu by announcing the sound name along side the "Loading" prompt when a test sound is selected.
+Made it so the Learn Game Sounds menu remembers your last selected sound category. This is useful for returning to a specific sound group without having to start over again from the top every time.
+Improved the speaker test menu by announcing the sound name along side the Loading prompt when a test sound is selected.
 Fixed an issue on mac devices where the updater would download the update file, along with copying the download link to the clipboard. From now on, the clipboard action will only be performed to prevent redundant or inaccessible downloads inside the game's bundle.
 Added some more speaker test sounds into the speaker test menu.
 Updated the readme file with added and modified keyboard shortcuts.
