--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 3.8
+Changed the order of some door related sounds.
 Made it so pressing the letter C key now only tells you the coordinates you're located at, along with the tile you're walking on.
 Removed all announcements related to reloading ammo based weapons. You now should only here the accompanying sounds that go with reloading them.
 Made it so weapons now reset properly at the start of each new game session. All weapon stats, including ammo, firing timers, and reload statuses are now cleared when starting a new game. This ensures a clean and consistent gameplay experience without leftover values from previous played sessions.
