Made it so the preview volume in the learn game sounds menu now resets itself back to it's default value after exiting the menu.

--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 3.8
+Made it so the preview volume in the learn game sounds menu now resets itself back to it's default value after exiting the menu.
 Made it so the Learn Game Sounds menu also remembers the last selected sound of a category. This makes it quicker to pick up where you left off, especially when reviewing long lists of sounds.
 Fixed a bug where doors took priority over items when pressing shift enter when you were near one.
 Added some more item related sounds to the learn game sounds menu.
