Fixed some more numbered translation bugs.

--- a/data/lang/normal/English.lng
+++ b/data/lang/normal/English.lng
@@ -1,1 +1,38 @@
-ToyMania, version =ToyMania, version
+&audio settings=&audio settings
+&back=&back
+&game settings=&game settings
+&open save data location=&open save data location
+&reset settings=&reset settings
+&save settings=&save settings
+Back=Back
+Boss: This category has a total of  sounds=Boss: This category has a total of  sounds
+Cars: This category has a total of  sounds=Cars: This category has a total of  sounds
+Clear game progresses.=Clear game progresses.
+Copy all game progresses to clipboard=Copy all game progresses to clipboard
+Doors: This category has a total of  sounds=Doors: This category has a total of  sounds
+Export all game progresses to file=Export all game progresses to file
+Game menu. You can start a new game session, learn about important sounds, view achievements, or check your stats here.=Game menu. You can start a new game session, learn about important sounds, view achievements, or check your stats here.
+Guards: This category has a total of  sounds=Guards: This category has a total of  sounds
+Items: This category has a total of  sounds=Items: This category has a total of  sounds
+Keys: This category has a total of  sounds=Keys: This category has a total of  sounds
+Learn game sounds menu. You can preview the most important sounds used by the game here. This menu is organized by sound category for easier viewing.=Learn game sounds menu. You can preview the most important sounds used by the game here. This menu is organized by sound category for easier viewing.
+Main menu. Please choose an option with your arrow keys, then press enter to activate one.=Main menu. Please choose an option with your arrow keys, then press enter to activate one.
+Player: This category has a total of  sounds=Player: This category has a total of  sounds
+ToyMania, version .=ToyMania, version .
+Toys: This category has a total of  sounds=Toys: This category has a total of  sounds
+UI: This category has a total of  sounds=UI: This category has a total of  sounds
+Weapons: This category has a total of  sounds=Weapons: This category has a total of  sounds
+back=back
+check for game updates=check for game updates
+exit game=exit game
+exiting=exiting
+game menu=game menu
+learn game sounds=learn game sounds
+loading=loading
+read game user guides=read game user guides
+restart game=restart game
+settings menu=settings menu
+speaker test menu=speaker test menu
+start game=start game
+view game achievements=view game achievements
+view game statistics=view game statistics
