Fixed some critical duplication bugs with the translation system for all languages.
Fixed An issue where the check_translations function would append duplicate lines to the language translation file every time it was called, causing clutter and unnecessary repetition.
Made it so the translation system now Preserves complete keys and values without having to aggressivly trimm the contents of the written file.

--- a/data/lang/normal/English.lng
+++ b/data/lang/normal/English.lng
@@ -5,33 +5,44 @@
 &reset settings=&reset settings
 &save settings=&save settings
 Back=Back
-Boss: This category has a total of  sounds=Boss: This category has a total of  sounds
-Cars: This category has a total of  sounds=Cars: This category has a total of  sounds
-Clear game progresses.=Clear game progresses.
+Boss: This category has a total of =Boss: This category has a total of
+Cannot continue= Cannot continue
+Cars: This category has a total of =Cars: This category has a total of
+Clear game progresses=Clear game progresses
 Copy all game progresses to clipboard=Copy all game progresses to clipboard
-Doors: This category has a total of  sounds=Doors: This category has a total of  sounds
+Doors: This category has a total of =Doors: This category has a total of
+Error=Error
 Export all game progresses to file=Export all game progresses to file
-Game menu. You can start a new game session, learn about important sounds, view achievements, or check your stats here.=Game menu. You can start a new game session, learn about important sounds, view achievements, or check your stats here.
-Guards: This category has a total of  sounds=Guards: This category has a total of  sounds
-Items: This category has a total of  sounds=Items: This category has a total of  sounds
-Keys: This category has a total of  sounds=Keys: This category has a total of  sounds
-Learn game sounds menu. You can preview the most important sounds used by the game here. This menu is organized by sound category for easier viewing.=Learn game sounds menu. You can preview the most important sounds used by the game here. This menu is organized by sound category for easier viewing.
-Main menu. Please choose an option with your arrow keys, then press enter to activate one.=Main menu. Please choose an option with your arrow keys, then press enter to activate one.
-Player: This category has a total of  sounds=Player: This category has a total of  sounds
-ToyMania, version .=ToyMania, version .
-Toys: This category has a total of  sounds=Toys: This category has a total of  sounds
-UI: This category has a total of  sounds=UI: This category has a total of  sounds
-Weapons: This category has a total of  sounds=Weapons: This category has a total of  sounds
+Game menu=Game menu
+Guards: This category has a total of =Guards: This category has a total of
+Items: This category has a total of =Items: This category has a total of
+Keys: This category has a total of =Keys: This category has a total of
+Learn game sounds menu=Learn game sounds menu
+Main menu=Main menu
+Player: This category has a total of =Player: This category has a total of
+Please choose an option with your arrow keys, then press enter to activate one= Please choose an option with your arrow keys, then press enter to activate one
+Preferences=Preferences
+The fallback language file English=The fallback language file English
+This menu is organized by sound category for easier viewing= This menu is organized by sound category for easier viewing
+ToyMania, version =ToyMania, version
+Toys: This category has a total of =Toys: This category has a total of
+UI: This category has a total of =UI: This category has a total of
+Weapons: This category has a total of =Weapons: This category has a total of
+You can preview the most important sounds used by the game here= You can preview the most important sounds used by the game here
+You can start a new game session, learn about important sounds, view achievements, or check your stats here= You can start a new game session, learn about important sounds, view achievements, or check your stats here
 back=back
 check for game updates=check for game updates
 exit game=exit game
 exiting=exiting
 game menu=game menu
 learn game sounds=learn game sounds
+lng is missing or empty=lng is missing or empty
 loading=loading
 read game user guides=read game user guides
 restart game=restart game
+s&peech settings=s&peech settings
 settings menu=settings menu
+sounds= sounds
 speaker test menu=speaker test menu
 start game=start game
 view game achievements=view game achievements
