--- a/docks/changelog.txt
+++ b/docks/changelog.txt
@@ -1,4 +1,5 @@
 new in 4.0
+Updated the todo list file to include a description tag for things that either need to be finished, or things that have already been finished in the game.
 Fixed a bug where darts acted like teleporters when being used from your inventory.
 Added the ability to face a certain direction when moving. This is very useful for aiming at various entities when using tactical items in the game.
 Added the dart item for purchase in the shop menu. These will stun enemies for a certain amount of time when used from your inventory. This item is only available in the endless game.
